--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,78 @@
 ﻿
+.vs/ODataOrders/DesignTimeBuild/.dtbcache.v2
+.vs/ODataOrders/v16/.suo
+appsettings.Development.json
+appsettings.json
+bin/Debug/net5.0/appsettings.Development.json
+bin/Debug/net5.0/appsettings.json
+bin/Debug/net5.0/Humanizer.dll
+bin/Debug/net5.0/Microsoft.AspNetCore.OData.dll
+bin/Debug/net5.0/Microsoft.Data.SqlClient.dll
+bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Design.dll
+bin/Debug/net5.0/Microsoft.EntityFrameworkCore.dll
+bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Relational.dll
+bin/Debug/net5.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+bin/Debug/net5.0/Microsoft.Extensions.DependencyInjection.dll
+bin/Debug/net5.0/Microsoft.Identity.Client.dll
+bin/Debug/net5.0/Microsoft.IdentityModel.JsonWebTokens.dll
+bin/Debug/net5.0/Microsoft.IdentityModel.Logging.dll
+bin/Debug/net5.0/Microsoft.IdentityModel.Protocols.dll
+bin/Debug/net5.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+bin/Debug/net5.0/Microsoft.IdentityModel.Tokens.dll
+bin/Debug/net5.0/Microsoft.OData.Core.dll
+bin/Debug/net5.0/Microsoft.OData.Edm.dll
+bin/Debug/net5.0/Microsoft.OData.ModelBuilder.dll
+bin/Debug/net5.0/Microsoft.Spatial.dll
+bin/Debug/net5.0/Newtonsoft.Json.dll
+bin/Debug/net5.0/ODataOrders.deps.json
+bin/Debug/net5.0/ODataOrders.dll
+bin/Debug/net5.0/ODataOrders.exe
+bin/Debug/net5.0/ODataOrders.pdb
+bin/Debug/net5.0/ODataOrders.runtimeconfig.dev.json
+bin/Debug/net5.0/ODataOrders.runtimeconfig.json
+bin/Debug/net5.0/ref/ODataOrders.dll
+bin/Debug/net5.0/runtimes/unix/lib/netcoreapp3.1/Microsoft.Data.SqlClient.dll
+bin/Debug/net5.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.dll
+bin/Debug/net5.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.pdb
+bin/Debug/net5.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+bin/Debug/net5.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.pdb
+bin/Debug/net5.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+bin/Debug/net5.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.pdb
+bin/Debug/net5.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+bin/Debug/net5.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.pdb
+bin/Debug/net5.0/runtimes/win/lib/netcoreapp3.1/Microsoft.Data.SqlClient.dll
+bin/Debug/net5.0/runtimes/win/lib/netstandard2.0/System.Runtime.Caching.dll
+bin/Debug/net5.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.ProtectedData.dll
+bin/Debug/net5.0/System.Configuration.ConfigurationManager.dll
+bin/Debug/net5.0/System.Diagnostics.DiagnosticSource.dll
+bin/Debug/net5.0/System.IdentityModel.Tokens.Jwt.dll
+bin/Debug/net5.0/System.Runtime.Caching.dll
+bin/Debug/net5.0/System.Security.Cryptography.ProtectedData.dll
+obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+obj/Debug/net5.0/apphost.exe
+obj/Debug/net5.0/ODataOrders.AssemblyInfo.cs
+obj/Debug/net5.0/ODataOrders.AssemblyInfoInputs.cache
+obj/Debug/net5.0/ODataOrders.assets.cache
+obj/Debug/net5.0/ODataOrders.csproj.CopyComplete
+obj/Debug/net5.0/ODataOrders.csproj.CoreCompileInputs.cache
+obj/Debug/net5.0/ODataOrders.csproj.FileListAbsolute.txt
+obj/Debug/net5.0/ODataOrders.csprojAssemblyReference.cache
+obj/Debug/net5.0/ODataOrders.dll
+obj/Debug/net5.0/ODataOrders.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net5.0/ODataOrders.genruntimeconfig.cache
+obj/Debug/net5.0/ODataOrders.MvcApplicationPartsAssemblyInfo.cache
+obj/Debug/net5.0/ODataOrders.MvcApplicationPartsAssemblyInfo.cs
+obj/Debug/net5.0/ODataOrders.pdb
+obj/Debug/net5.0/ODataOrders.RazorTargetAssemblyInfo.cache
+obj/Debug/net5.0/ref/ODataOrders.dll
+obj/Debug/net5.0/staticwebassets/ODataOrders.StaticWebAssets.Manifest.cache
+obj/Debug/net5.0/staticwebassets/ODataOrders.StaticWebAssets.xml
+obj/ODataOrders.csproj.EntityFrameworkCore.targets
+obj/ODataOrders.csproj.nuget.dgspec.json
+obj/ODataOrders.csproj.nuget.g.props
+obj/ODataOrders.csproj.nuget.g.targets
+obj/project.assets.json
+obj/project.nuget.cache
+ODataOrders.csproj.user
+Properties/launchSettings.json
